--- a/LSTM_time_forecasting_Temperature_Prediction.ipynb
+++ b/LSTM_time_forecasting_Temperature_Prediction.ipynb
@@ -6,7 +6,7 @@
       "name": "LSTM time forecasting_Temperature Prediction.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOyTHiCIX5vxcuyt2k0s9XU",
+      "authorship_tag": "ABX9TyNHhFTfdi/sBMdVtZ5jN22t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Tan2306/LSTM-GRU-Conv1D---Temperature-simple-and-multivariate-prediction/blob/main/LSTM_time_forecasting_Temperature_Prediction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Reference - https://www.youtube.com/watch?v=c0k-YLQGKjY&t=1165s"
+      ],
+      "metadata": {
+        "id": "GlV9-fwol2zU"
+      }
     },
     {
       "cell_type": "markdown",
@@ -4637,6 +4646,15 @@
           "execution_count": 90
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We see the best model is the last one by far, LSTM with temperature, pressure and datetime inputs and we try to predict pressure as well temperature. "
+      ],
+      "metadata": {
+        "id": "D-Z7gz6Wipxt"
+      }
     }
   ]
 }
